Overflow fix

--- a/web/css/reddit.css
+++ b/web/css/reddit.css
@@ -157,7 +157,7 @@ body {
 .post-content {
 	width: 100%;
 	margin: 8px auto 0 auto;
-	overflow: hidden scroll;
+	overflow: hidden;
 }
 
 .post-content > * {
@@ -243,6 +243,10 @@ body {
 	flex: 1 0;
 	width: 67%;
 	margin: 8px 0 0 0;
+}
+
+#full-post .md {
+	overflow-y: scroll;
 }
 
 #comments {
